[gd_scene load_steps=12 format=2]

[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Terrain.tscn" type="PackedScene" id=2]
[ext_resource path="res://Target/Target.tscn" type="PackedScene" id=3]
[ext_resource path="res://Player/RayCast.gd" type="Script" id=4]
[ext_resource path="res://NPC/Zombie.tscn" type="PackedScene" id=5]
[ext_resource path="res://NPC/Zombie.gd" type="Script" id=6]
[ext_resource path="res://UI/Dialogue.gd" type="Script" id=7]
[ext_resource path="res://UI/UI.gd" type="Script" id=8]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 1, 0, 0, 1 )
emission_enabled = true
emission = Color( 1, 0, 0, 1 )
emission_energy = 4.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="SphereMesh" id=2]
material = SubResource( 1 )
radius = 0.5
height = 1.0

[sub_resource type="SphereShape" id=3]

[node name="Game" type="Spatial"]

[node name="Player" parent="." instance=ExtResource( 1 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 12.7706, 0.5, -1.36089 )

[node name="Pivot" type="Position3D" parent="Player"]

[node name="Camera" type="Camera" parent="Player/Pivot"]
transform = Transform( -1, 1.51808e-08, -8.60946e-08, 0, 0.984808, 0.173648, 8.74228e-08, 0.173648, -0.984808, 0, 5, -8 )

[node name="RayCast" type="RayCast" parent="Player/Pivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0 )
enabled = true
cast_to = Vector3( 0, -1, 100 )
script = ExtResource( 4 )

[node name="Reticule" type="Position3D" parent="Player/Pivot/RayCast"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 50 )

[node name="MeshInstance" type="MeshInstance" parent="Player/Pivot/RayCast/Reticule"]
mesh = SubResource( 2 )
material/0 = null

[node name="lowpoly_scene" parent="." instance=ExtResource( 2 )]
transform = Transform( 3, 0, 0, 0, 3, 0, 0, 0, 3, 0, 0, 0 )

[node name="Target_container" type="Spatial" parent="."]
visible = false

[node name="Target" parent="Target_container" instance=ExtResource( 3 )]
transform = Transform( 0.866025, 0, 0.5, 0, 1, 0, -0.5, 0, 0.866025, -27, 4, -10.7562 )

[node name="Target2" parent="Target_container" instance=ExtResource( 3 )]
transform = Transform( 0.766044, 0, 0.642788, 0, 1, 0, -0.642788, 0, 0.766044, -17.4805, 3.50321, -8.80556 )

[node name="Target3" parent="Target_container" instance=ExtResource( 3 )]
transform = Transform( 0.984808, 0, 0.173648, 0, 1, 0, -0.173648, 0, 0.984808, -36.2248, 1.94624, -17.9012 )

[node name="Target4" parent="Target_container" instance=ExtResource( 3 )]
transform = Transform( 0.866025, 0, 0.5, 0, 1, 0, -0.5, 0, 0.866025, -20.7456, 2.21058, -17.8733 )

[node name="Zombie" parent="." instance=ExtResource( 5 )]
transform = Transform( 0.893034, 0, -0.449989, 0, 1, 0, 0.449989, 0, 0.893034, 11.2074, 0, -24.4258 )
script = ExtResource( 6 )

[node name="Area" type="Area" parent="Zombie"]

[node name="CollisionShape" type="CollisionShape" parent="Zombie/Area"]
transform = Transform( 3, 0, 0, 0, 3, 0, 0, 0, 3, 0, 0, 0 )
shape = SubResource( 3 )

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource( 8 )

[node name="Background" type="ColorRect" parent="UI"]
anchor_right = 1.0
margin_bottom = 30.0
color = Color( 0, 0, 0, 0.501961 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="UI"]
margin_left = 10.0
margin_right = 510.0
margin_bottom = 30.0
text = "Score: 0"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Time" type="Label" parent="UI"]
margin_left = 512.0
margin_right = 1014.0
margin_bottom = 30.0
text = "Timer: 0"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="UI"]

[node name="Dialogue" type="Control" parent="UI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="UI/Dialogue"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -130.0
margin_bottom = -70.0
color = Color( 0, 0, 0, 0.501961 )

[node name="Text" type="RichTextLabel" parent="UI/Dialogue"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -120.0
margin_bottom = -60.0
bbcode_enabled = true

[connection signal="body_entered" from="Zombie/Area" to="Zombie" method="_on_Area_body_entered"]
[connection signal="body_exited" from="Zombie/Area" to="Zombie" method="_on_Area_body_exited"]
[connection signal="timeout" from="UI/Timer" to="UI" method="_on_Timer_timeout"]
